[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/character.png" type="Texture" id=1]
[ext_resource path="res://prefab/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/arrow2_off.png" type="Texture" id=3]
[ext_resource path="res://assets/arrow2.png" type="Texture" id=4]
[ext_resource path="res://assets/arrow3.png" type="Texture" id=5]
[ext_resource path="res://prefab/StateMachine.gd" type="Script" id=6]
[ext_resource path="res://prefab/ProgressArrow.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.0
height = 34.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 583, 292 )
script = ExtResource( 2 )

[node name="prg_jump" type="TextureProgress" parent="."]
margin_left = -15.0
margin_top = -117.0
margin_right = 15.0
margin_bottom = 23.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 15, 130 )
value = 40.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 5 )
fill_mode = 3
script = ExtResource( 7 )

[node name="prg_attack" type="TextureProgress" parent="."]
margin_left = -15.0
margin_top = -118.0
margin_right = 15.0
margin_bottom = 22.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 15, 130 )
value = 40.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 3
script = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -80 )
current = true
smoothing_enabled = true
editor_draw_screen = false

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="RayBottom" type="RayCast2D" parent="."]
position = Vector2( -11, 0 )

[node name="RayBottom2" type="RayCast2D" parent="."]
position = Vector2( 10, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )
